--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -2295,6 +2295,181 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Algebra.
 \end{bemerk}
 
+\todo[inline]{Vorlesung vom 2009-05-14}
+
+%Vorlsung vom 2009-05-19
+%satz 7.4
+\begin{satz}\label{satz:74}
+  Jede torsionsfreie endlich"=erzeugte abelsche Gruppe $A$ ist frei.
+  \begin{proof}
+    $A=\langle a_{1},\dotsc, a_{k}\rangle, a_{1}\neq0, a_{k}\neq0$ und
+    $B=A/\langle a_{k}\rangle, T(B)= C/\langle a_{k}\rangle$ mit $\langle
+    a_{k}\rangle\leq C\leq A$. Dann: $\langle a_{1}+C,\dotsc,a_{k-1}+C\rangle=
+    A/C\cong B/T(B)$ endlich erzeugt und torsionsfrei. Nun führen wir eine
+    Induktion nach $k$ durch. Der Fall $k=1$ wurde oben schon erledigt. Also
+    betrachten wir $k>1$. Nach Induktion ist $A/C$ frei, d.\,h. $A/C$ ist
+    isomorph zu $\Z^{t}$ für ein $t\in\N_{0}$. Nach dem Satz 7.3\todo{Link
+    einfügen} ist $A=D\oplus C$ für eine Untergruppe $D\leq A$. Insbesondere
+    ist $D$ isomorph $A/C\cong\Z^{t}$. Daher genügt zu zeigen, dass das $C$
+    frei ist. Wegen $C\cong A/D= \langle a_{1}+D,\dotsc,a_{k}+D\rangle$ ist
+    $C$ endlich erzeugt. Sei etwa $C$ erzeugt von $\langle c_{1},\dotsc,
+    c_{l}\rangle$. Für $c\in C$ ist $c+\langle a_{k}\rangle\in C/\langle
+    a_{k}\rangle=T(B)$. Daher existiert ein $r\in\N$ mit der Eigenschaft
+    $0=r\cdot(c+\langle a_{k}\rangle)= rc+\langle a_{k}\rangle$, d.\,h.
+    $r\in\langle a_{k}\rangle$, etwa $rc=sa_{k}$ mit $s\in\Z$. Sind auch
+    $r'\in\N$ und $s\in\Z$ mit $r'c=s'a_{k}$, so ist $(r's-rs')a_{k}=
+    r'sa_{k}- rs'a_{k}= r'rc-rr'c=0$. Da $A$ torsionsfrei ist, folgt, dass
+    $r's=rs'$, d.\,h. $\nicefrac{s}{r}= \nicefrac{s'}{r'}$ in $\Q$. Durch
+    $f(c)\coloneq\nicefrac{s}{r}$ erhalten wir eine wohldefinierte Abbildung
+    $f\colon C\rightarrow\Q$. Seien $\tilde{c}\in C, \tilde{r}\in\N,
+    \tilde{s}\in\Z$ mit $\tilde{r}\tilde{c}=\tilde{s}a_{k}$. Dann haben wir:
+    $(r\tilde{s}+ \tilde{r}s)a_{k}= r\tilde{s}a_{k}+ \tilde{r}sa_{k}=
+    r\tilde{r}\tilde{c}+ \tilde{r}rc= r\tilde{r}(c+\tilde{c})$ d.\,h.
+    $f(c+\tilde{c})= \frac{r\tilde{s}+ \tilde{r}s}{r\tilde{r}}=
+    \nicefrac{s}{r}+ \nicefrac{\tilde{s}}{\tilde{r}}= f(c)+ f(\tilde{c})$.
+    Somit ist $f$ ein Homomorphismus. Ist $f(c)=0$, so ist
+    $\nicefrac{s}{r}=0$, also $s=0$ oder $rc=sa_{k}=0$. Somit muss $c=0$ sein.
+    Denn $A$ ist torsionsfrei. Folglich ist das $f$ ein Monomorphismus, da der
+    Kern $0$ ist. Wegen $C=\subseteq c_{1},\dotsc, c_{l}\rangle$ ist
+    $f(C)=\langle f(c_{1}),\dotsc,f(c_{l})\rangle\leq(\Q,+)$. Es ist $f(C)$
+    zyklisch (siehe Übungsaufgaben \todo{Link einfügen}), d.\,h. $f(C)=0$ oder
+    $f(C)\cong\Z$. Insbesondere ist $f(C)$ frei und damit auch $C$ frei.
+    Insgesamt ist $A=D\oplus C$ frei.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Der Beweis zeigt genauer, dass man im Fall $A=\langle a_{1},\dotsc,
+  a_{k}\rangle$ eine Basis $b_{1},\dotsc, b_{t}$ von $A$ mit $t\leq k$ wählen
+  kann. Dies funktioniert wie bei Vektorräumen in der linearen Algebra.
+  Hingegen kann man im Allgemeinen $b_{1},\dotsc, b_{t}$ nicht aus
+  $\{a_{1},\dotsc, a_{k}\}$ wählen. Denn  $\Z=\langle2,3\rangle$, aber nicht
+  nur von $2$ oder $3$ erzeugt.
+\end{bemerk}
+
+%satz 7.5
+\begin{satz}
+  Sei $A$ eine freie abelsche Gruppe mit Basen $a_{1},\dotsc, a_{k}$ und
+  $b_{1},\dotsc, b_{l}$. Dann ist $k$ gleich $l$.
+  \begin{proof}
+    Offenbar ist $2A\coloneq\{2a\colon a\in A\}\leq A$ und $A/2A$ wird zu
+    einem Vektorraum über dem Körper $K\coloneq\Z/2\Z$ mit
+    $(z+2\Z)(a+2a)\coloneq za+2A$ mit $z\in\Z$ und $a\in A$. Diese Definition
+    ist wohldefiniert, wie man schnell nachrechnet. Wir behaupten, dass
+    $a_{1}+2A,\dotsc,a_{k}+2A$ eine $K$"~Basis von $A/2A$ bilden.  Sicher wird
+    $A/2A$ von $a_{1}+2A,\dotsc,a_{k}+2A$ aufgespannt. Seien $z_{1},\dotsc,
+    z_{k}\in\Z$ mit $0=(z_{1}+2\Z)(a_{1}+2A)+\dotsb+(z_{k}+2\Z)(a_{k}+2A)=
+    z_{1}a_{1}+\dotsb+ z_{k}a_{k}+2A$. Dann ist $x\coloneq z_{1}a_{1}+\dotsb+
+    z_{k}a_{k}\in2A$, d.\,h. $x=2y$ für ein $y\in A$. Schreibe $y=
+    y_{1}a_{1}+\dotsb+ y_{k}a_{k}$ mit $y_{1},\dotsc, y_{k}\in\Z$. Dann ist
+    $0=x-2y= (x_{1}-2y_{1})a_{1}+\dotsb+ (z_{k}-2y_{k})a_{k}$, also
+    $z_{i}=2y_{i}$. Somit ist $z_{i}+2\Z=0$ für $i=1,\dotsc,n$. Damit ist
+    gezeigt, dass $a_{1}+2A,\dotsc,a_{k}+2A$ eine $K$"~Basis von $A/2A$
+    bilden. Analog bilden auch $b_{1}+2A,\dotsc,b_{l}+2A$ eine $K$"~Basis von
+    $A/2A$. Nach den Aussagen aus der linearen Algebra ist dann $k=l$.
+  \end{proof}
+\end{satz}
+
+\begin{defini}[Rang]
+  Es heißt $k=\rg(A)$ der \highl{Rang} von $A$.
+\end{defini}
+
+%satz 7.6
+\begin{satz}
+  Sei $A$ eine endlich erzeugte abelsche Gruppe. Dann ist $T(A)$ endlich und
+  $A=T(A)\oplus F$ mit einer freien abelschen Untergruppe $F\leq A$.
+  \begin{proof}
+    Da $A/T(A)$ endlich erzeugt und torsionsfrei ist, ist $A/T(A)$ nach
+    \autoref{satz:74} eine freie abelsche Gruppe. Nach dem Satz 7.3
+    \todo{Link einfügen}
+    ist $A=T(A)\oplus F$ für ein $F\leq A$. Insbesondere ist $F\cong A/T(A)$
+    freie abelsche Gruppe. Außerdem ist $T(A)\cong A/F$ endlich erzeugt, etwa
+    $T(A)= \langle t_{1},\dotsc, t_{l}\rangle$. Mit $k_{i}\coloneq\abs{\langle
+    t_{i}\rangle}<\infty$ ist also $T(A)=\{z_{1}t_{1}+\dotsb+ z_{l}t_{l}\colon
+    0\leq z_{i}<k_{i}\}$ endlich.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Wegen $F\cong A/T(A)$ ist $F$ durch $A$ bis auf Isomorphie eindeutig
+  bestimmt. Insbesondere ist der Rang von $F$ durch $A$ eindeutig bestimmt.
+  Dagegen ist $F$ selbst i.\,A. \emph{nicht} eindeutig bestimmt.
+\end{bemerk}
+
+%satz 7.7
+\begin{satz}
+  Sei $A$ eine abelsche Gruppe der Ordnung $n<\infty$ und
+  $n=p_{1}^{k_{1}}\cdot\dotso \cdot p_{r}^{k_{r}}$ die Primfaktorzerlegung von
+  $n$. Dann ist $A=A_{1}\oplus\dotso \oplus A_{r}$ mit $A_{i}\coloneq\{a\in
+  A\colon p_{i}^{k_{i}}a=0\}\leq A$ für $i=1,\dotsc,r$.
+  \begin{proof}
+    Für $a\in A$ gilt: $m\coloneq\abs{\langle a\rangle}\big\mid n$. Daher
+    existiert eine Primfaktorzerlegung $m=p_{1}^{l_{1}}\cdot\dotso \cdot
+    p_{r}^{l_{r}}$ mit $l_{1}\leq k_{1},\dotsc, l_{r}\leq k_{r}$. Für
+    $i=1,\dotsc,r$ sei $m_{i}\coloneq\nicefrac{m}{p_{i}^{l_{i}}}$. Dann ist
+    $\abs{\langle m_{i}a\rangle}= p_{i}^{l_{i}}$. Nach \textsc{Lagrange} ist
+    die Ordnung der Untergruppe $\langle m_{1}a,\dotsc,m_{r}a\rangle$ von
+    $\langle a\rangle$  teilbar durch $p_{1}^{l_{1}},\dotsc, p_{r}^{l_{r}}$,
+    also auch durch $m$. Folglich ist $a\in\langle a\langle=\langle
+    m_{1}a,\dotsc,m_{r}a\rangle\in A_{1}+\dotsb+ A_{r}$. Damit ist gezeigt,
+    dass $A=A_{1}+\dotsb+ A_{r}$.
+
+    Sei $x_{1}\in A_{1}\cap(A_{1}+\dotsb+ A_{r})$. Wir schreiben $x_{1}=
+    x_{2}+\dotsb+ x_{r}$ mit $x_{2}\in A_{2},\dotsc, x_{r}\in A_{r}$. Für
+    $i=1,\dotsc,r$ ist $p_{i}^{k_{i}}x_{i}=0$ und es folgt mit $n_{1}\coloneq
+    p_{2}^{k_{2}}\cdot\dotso \cdot p_{r}^{k_{r}}$: $n_{1}x_{1}=
+    n_{1}x_{2}+\dotsb+ n_{1}x_{r}=0=p_{1}k_{1}x_{1}$. Daher ist die Ordnung
+    von $\langle x_{1}\rangle$ ein Teiler des größten gemeinsamen Teilers von
+    $n_{1}$ und $p_{1}^{k_{1}}$. Dieser ist aber $1$, d.\,h. $x_{1}=0$. Also
+    $A_{1}\cap(A_{2}+\dotsb+ A_{r})=0$. Aus Symmetriegründen folgt somit
+    $A=A_{1}\oplus\dotso \oplus A_{r}$.
+  \end{proof}
+\end{satz}
+
+%satz 7.8
+\begin{satz}
+  Seien $p\in\P, k\in\N$ und $A$ eine endliche abelsche Gruppe mit $p^{k}a=0$
+  für alle $a\in A$. Dann existieren endlich viele natürliche Zahlen
+  $t_{1},\dotsc, t_{s}$ mit $A\cong(\Z/p^{t_{1}}\Z)\times\dotso
+  \times(\Z/p^{t_{s}}\Z)$.
+  \begin{proof}
+    Aus der Voraussetzung folgt leicht, dass für alle $a\in A$ gilt:
+    $\abs{\langle a\rangle}\big\mid p^{k}$. Sei $a_{1}\in A$ derart, dass
+    $p^{t_{1}}=\abs{\langle a_{1}\rangle}$ maximal ist. Dann erfüllt $B\coloneq
+    A/\langle a_{1}\rangle$ die gleichen Voraussetzungen wie $A$. Aber
+    $\abs{B}<\abs{A}$. Wir verwenden jetzt eine Induktion nach der
+    Gruppenordnung. Daher können wir annehmen, dass
+    $B\cong(\Z/p^{t_{2}}\Z)\times\dotso \times(\Z/p^{t_{s}}\Z)$ mit
+    $t_{2},\dotsc, t_{s}\in\N$. Also existieren Elemente $\overline{b_{2}}=
+    b_{2}/\langle a_{1}\rangle,\dotsc,\overline{b_{s}}= b_{s}/\langle
+    a_{1}\rangle\in B= A/\langle a_{1}\rangle$ der Ordnungen
+    $p^{t_{2}},\dotsc, p^{t_{s}}$ mit
+    $B=\langle\overline{b_{2}}\rangle\oplus\dotso
+    \oplus\langle\overline{b_{s}}\rangle$. Für $i=2,\dotsc,s$ ist
+    $0=p^{t_{i}}\overline{b_{i}}= p^{t_{i}} b_{i}+\langle a_{1}\rangle$,
+    d.\,h. $p^{t_{i}}b_{i}$ mit in der Gruppe $\langle a_{1}\rangle$ liegen.
+    Wir schreiben $p^{t_{i}}b_{i}= z_{i}a_{1}$ mit $z_{i}\in\Z$. Wegen
+    $p^{t_{1}}\overline{b_{i}}= p^{t_{1}}b_{i}+ \langle a_{1}\rangle=0$ ist
+    $t_{i}\leq t_{1}$ und $0=p^{t_{1}}b_{i}= p^{t_{1}-t_{i}}p^{t_{i}}b_{i}=
+    p^{t_{1}-t_{i}}z_{i}a_{1}$. Daher ist $z_{i}$ durch $p^{t_{i}}$ teilbar,
+    etwa $z_{i}= p^{t_{i}}y_{i}$. Also:  $0=p^{t_{i}}b_{i}- p^{t_{i}}
+    y_{i}a_{1}= p^{t_{i}}(\underbrace{b_{i}-y_{i}a_{1}}_{=\colon a_{i}})$ und
+    $a_{i}+\langle a_{1}\rangle=b_{i}+\langle a_{1}\rangle$. Ferner gilt:
+    $\abs{\langle a_{i}\rangle}= p^{t_{i}}$.
+
+    Wegen $A/\langle a_{1}\rangle=
+    \langle\overline{b_{2}},\dotsc,\overline{b_{s}}\rangle= \langle
+    a_{2}+\langle a_{1}\rangle, \dotsc,a_{s}+\langle a_{1}\rangle\rangle$ ist
+    $A=\langle a_{1},a_{2},\dotsc, a_{s}\rangle$. Die Abbildung
+    $f\colon\Z/p^{t_{1}}\Z\times\dotso \Z/p^{t_{s}}\Z\rightarrow A$ mit
+    $(x_{1}+p^{t_{1}}\Z,\dotsc,x_{s}+p^{t_{s}}\Z)\mapsto x_{1}a_{1}+\dotsb+
+    x_{s}a_{s}$ ist wohldefiniert und ein surjektiver Homomorphismus
+    (Epimorphismus). Dabei gilt: $\abs{A}=\abs{A/\langle a_{1}\rangle}
+    \cdot\abs{\langle a_{1}\rangle}= p^{t_{2}}\cdot\dotso \cdot
+    p^{t_{s}}p^{t_{1}}= \abs{\Z/p^{t_{1}}\Z\times\dotso
+    \times\Z/p^{t_{s}}\Z}$. Also ist $f$ bijektiv, d.\,h. ein Isomorphismus.
+  \end{proof}
+\end{satz}
 
 \clearpage
 \appendix
