kleine Verbesserungen und Anmkerungen von der Vorlesung vom 2009-05-27
git-svn-id: https://svn.lug-jena.de/uni-skripte@2124 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -1169,7 +1169,6 @@ zuordnen:
 Das liefert eine Funktion auf $\R^{n}$, die
 \highl{Fouriertransformierte} von $f$.
 
-
 Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
 
 \begin{satz}\label{satz:211}
@@ -1196,7 +1195,7 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
     Vorbetrachtung: $C^{k}(\R^{n})$ sind die $k$-mal stetig differenzierbaren
     Funktionen auf $\R^{n}$ und $C^{\infty}(\R^{n})$ sind die beliebig oft
     differenzierbaren Funktionen auf $\R^{n}$. Weiterhin sind
-    $C^{k}_{c}(\R^{n}), C^{\infty}_{c}(\R^{n})$ die entsprechenden Funktionen
+    $C^{k}_{c}(\R^{n})$ und $C^{\infty}_{c}(\R^{n})$ die entsprechenden Funktionen
     mit kompaktem Träger. Die erste Frage ist, ob es solche Funktionen
     überhaupt gibt. Eine spezielle Funktion kann man folgendermaßen
     konstruieren:
@@ -1211,17 +1210,18 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
     $\psi_{n}\in C^{\infty}_{c}(\R^{n})$.
 
     Es gilt, $C^{\infty}_{c}(\R^{n})$ ist dicht in $L_{p}(\R^{n})$ für $1\leq
-    p<\infty$. Genauer: Ist $f\in L_{1}(\R^{n})$ existieren die Ableitungen
+    p<\infty$. Genauer: Ist $f\in L_{p}(\R^{n})$ und existieren die Ableitungen
     $\frac{\partial f}{\partial x^{\alpha}}$ für eine endliche Menge von
     Multiindizies\footnote{$\alpha=(\alpha_{1},\dotsc,\alpha_{n}),
     \frac{\partial f}{\partial x^{\alpha}} = \frac{\partial^{\abs{\alpha}}
     f}{\partial x^{\alpha_{1}}_{1}\dotso \partial x^{\alpha_{n}}_{n}}$ mit
     $\abs{\alpha}= \alpha_{1}+\dotsb+\alpha_{n}$} $\alpha\in A$. Dann existiert
-    eine Folge $g_{k}\in C^{\infty}_{c}(\R^{n})$ mit $g_{k}\xrightarrow{L_{1}}
+    eine Folge $g_{k}\in C^{\infty}_{c}(\R^{n})$ mit $g_{k}\xrightarrow{L_{p}}
     f$ und $\frac{\partial g_{k}}{\partial x^{\alpha}}\rightarrow
     \frac{\partial f}{\partial x^{\alpha}}$ für $\alpha\in A$. Beweisidee: Für
-    $a>0$ betrachten wir $\psi_{n,a}(x)=\frac{1}{a^{n}} \psi_{n}(\frac{x}{a})$.
-
+    $a>0$ betrachten wir $\psi_{n,a}(x)=\frac{1}{a^{n}}
+    \psi_{n}(\frac{x}{a})$ mit $\psi_{n}\in C^{\infty}_{c}(\R^{n})$
+    und $\int_{\R^{n}} \psi_{n}\,dx=1$.
     Wenn wir $g_{a}=f*\psi_{n,a}$ bilden, dann bekommen wir  für $a\rightarrow
     0$ die gewünschte Folge. Genauer findet man den Beweis in (Triebel: Höhere
     Analysis).
@@ -1233,27 +1233,29 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
       \begin{align*}
 	\widehat{\frac{\partial f}{\partial x_{j}}}(\xi) &= c \int_{\R^{n}}
 	   \frac{\partial f}{\partial x_{j}} (x) e^{-ix\xi}\,dx\\
-	&= c\int\dotsi\int \left( \int \frac{\partial f}{\partial x_{j}} (x)
-	   e^{-ix\xi}\,dx_{j}\right)dx_{1}\dotso dx_{n} \text{ ohne } dx_{j}\\
+	&= c\int_{\R}\dotsi\int_{\R} \left( \int \frac{\partial f}{\partial x_{j}} (x)
+	   e^{-i\sum_{k=1}^{n} \xi_{k} x_{k}}\,dx_{j}\right)dx_{1}\dotso dx_{n} \text{ ohne } dx_{j}\\
 	&= c\int\dotsi\int \left(-\int f(x) \underbrace{\frac{\partial}{\partial x_{j}}
 	   (e^{-ix\xi})}_{-i\xi_{j}e^{-ix\xi}}\,dx_{j}\right) dx_{1}\dotso dx_{n} \text{ ohne } dx_{j}\\
 	&= i\xi_{j}\hat{f}(\xi)
       \end{align*}
+      Die Randterme bei plus und minus unendlich in der vorletzten
+      Gleichung verschwinden, da die Funktionen kompakten Träger haben.
      \item Wir brauchen eine Folge $g_{k}\in C^{\infty}_{c}(\R^{n})$ mit
       $g_{k}\xrightarrow{L_{1}}f, \frac{\partial g_{k}}{\partial
       x_{j}}\rightarrow \frac{\partial f}{\partial x_{j}}$. Wir wissen:
       \begin{align*}
 	\widehat{\frac{\partial g_{k}}{\partial x_{j}}} (\xi) &=
 	   i\xi_{j}\hat{g_{k}} (\xi)\\
-	\abs{\widehat{\frac{\partial f}{\partial x_{j}}} (\xi) -
-	  i\xi_{j}\hat{f}(\xi)} &\leq \abs{\widehat{\frac{\partial f}{\partial
+	\abs[\bigg]{\widehat{\frac{\partial f}{\partial x_{j}}} (\xi) -
+	  i\xi_{j}\hat{f}(\xi)} &\leq \abs[\bigg]{\widehat{\frac{\partial f}{\partial
 	   x_{j}}} (\xi) - \widehat{\frac{\partial g_{k}}{\partial x_{j}}}
-	   (\xi)} + \abs{i\xi_{j} \hat{g_{k}}(\xi)-I\xi_{j}\hat{f}(\xi)}\\
-	&= \abs{\widehat{\frac{\partial}{\partial x_{j}}(f-g_{k})} (\xi)} +
-	   \abs{\xi} \abs{\widehat{(g_{k}-f)}(\xi)}\\
-	&\leq c\norm{\frac{\partial}{\partial x_{j}} (f-g_{k})|L_{1}} +
-	   c\abs{\xi_{j}}\norm{f-g_{k}|L-1}\xrightarrow{k\rightarrow\infty} 0\\
-	&\Rightarrow \frac{\hat{\partial f}}{\partial x_{j}} (\xi) -
+	   (\xi)} + \abs[\bigg]{i\xi_{j} \hat{g_{k}}(\xi)-i\xi_{j}\hat{f}(\xi)}\\
+	&= \abs[\bigg]{\widehat{\frac{\partial}{\partial x_{j}}(f-g_{k})} (\xi)} +
+	   \abs{i\xi_{j} \widehat{(g_{k}-f)}(\xi)}\\
+	&\leq^{\text{~\autoref{satz:212}}} c\norm{\frac{\partial}{\partial x_{j}} (f-g_{k})|L_{1}} +
+	   c\abs{\xi_{j}}\norm{f-g_{k}|L_{-1}}\xrightarrow{k\rightarrow\infty} 0\\
+	&\Rightarrow \widehat{\frac{\partial f}{\partial x_{j}}} (\xi) -
 	   i\xi_{j}\hat{f}(\xi)=0
       \end{align*}
     \end{enumerate}
@@ -1261,9 +1263,10 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
 \end{satz}
 
 \begin{satz}\label{satz:213}
-  Sei $f\in L_{1}(\R^{n})$ mit $\xi_{j}f\in L_{1}(\R^{n})$. Dann gilt
+  Sei $f\in L_{1}(\R^{n})$ mit $x_{j}f(x)\in L_{1}(\R^{n})$. Dann gilt
   \begin{gather*}
-    \widehat{-ix_{j} f}= \frac{\partial }{\partial \xi_{j}} \hat{f}
+    \widehat{-ix_{j} f(x)}(\xi)= \frac{\partial }{\partial \xi_{j}}
+    \hat{f}(\xi)
   \end{gather*}
   \begin{proof}
     \begin{align*}
@@ -1276,7 +1279,7 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
 \end{satz}
 
 % satz 2.1.4
-\begin{satz}[Riemann-Lebesgue]\label{satz:214}
+\begin{satz}[Satz von \textsc{Riemann}-\textsc{Lebesgue}]\label{satz:214}
   Ist $f\in L_{1}(\R^{n})$, dann gilt:
   \begin{gather*}
     \lim_{\abs{\xi}\rightarrow\infty} \abs{\hat{f}(\xi)}=0
@@ -1286,13 +1289,15 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
       \item Sei $f\in C^{\infty}_{c}(\R^{n})$. Dann gilt:
       \begin{align*}
 	\abs{\xi_{j}^{2} \hat{f}(\xi)} &=^{\text{\autoref{satz:212}}}
-	   \abs{\widehat{\frac{\partial^{2} }{\partial x_{j}^{2}}}
+	   \abs{\widehat{\frac{\partial^{2} f}{\partial x_{j}^{2}}}
 	     (\xi)} \leq^{\text{\autoref{satz:211}}}
 	   (2\pi)^{-\nicefrac{n}{2}} \norm{\frac{\partial^{2}
-	   f}{\partial x_{j}^{2}} |L_{1}}\\
-	\Rightarrow \abs{(1+\abs{\xi}^{2})\hat{f}(\xi)} &\leq C \quad
+	   f}{\partial x_{j}^{2}} |L_{1}}= (2\pi)^{-\nicefrac{n}{2}}
+       C_{j}\\
+       \abs{\hat{f}(\xi)} &\leq c\norm{f|L_{1}}\leq C\\
+	\Rightarrow \abs{(1+\abs{\xi}^{2})\hat{f}(\xi)} &\leq C+ \sum C_{j}=C' \quad
 	   \forall \xi\in\R^{n}\\
-	\Rightarrow \abs{\hat{f}(\xi)} &\leq \frac{C}{1+\abs{\xi}^{2}}
+	\Rightarrow \abs{\hat{f}(\xi)} &\leq \frac{C'}{1+\abs{\xi}^{2}}
 	   \xrightarrow{\abs{\xi} \rightarrow\infty} 0
       \end{align*}
      \item Sei $f\in L_{1}$. Wähle $g\in C^{\infty}_{c}(\R^{n})$ mit
@@ -1314,7 +1319,8 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
 
 \begin{folg}
   Die Fouriertransformation bildet $L_{1}(\R^{n})$ linear und stetig in den
-  Raum $C_{0}(\R^{n})$ der im unendlichen verschwindenden Funktionen ab.
+  Raum $C_{0}(\R^{n})$ der im unendlichen verschwindenden Funktionen,
+  d.\,h. $\lim_{\abs{x}\rightarrow\infty} f(x)=0$, ab.
   Insbesondere ist mit $f\in L_{1}(\R^{n})$ auch $\hat{f}$ gleichmäßig stetig:
   \begin{gather*}
     \hat{ }\colon L_{1}(\R^{n})\rightarrow C_{0}(\R^{n})
