Teil der fehlenden Vorlesung eingefuegt
Es fehlen drei Vorlesungen. Mit dem Commit ist alles bis zu Beginn von Kapitel 9
(nilpotente Gruppen) ergaenzt. Weiterhin hatte ich immer \lhd geschrieben, wo
\unlhd hingehört. Das ist geaendert.


git-svn-id: https://svn.lug-jena.de/uni-skripte@2125 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -1419,7 +1419,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 %Vorlesung vom 2009-04-30
 %bem 4.6
-\begin{bemerk}
+\begin{bemerk}\label{bem:46}
   Für jede Familie $(N_{i})_{i\in I}$ von Normalteilern $N_{i}$ einer Gruppe
   $G$ ist $G\rightarrow\prod_{i\in I} G/N_{i}$ mit $g\mapsto(gN_{i})_{i\in I}$
   ein Homomorphismus mit dem Kern $N\coloneq\bigcap_{i\in I} N_{i}$. Nach dem
@@ -1912,13 +1912,13 @@ Codierungstheorie, \textsc{Banach}räume etc.
   bzw. \highl[Normalteiler!maximale]{maximale Normalteiler}
 \end{defini}
 
-\begin{satz}
+\begin{satz}\label{satz:63}
   \begin{enumerate}
    \item Sind $G_{1},\dotsc, G_{n}$ nichtabelsche einfache Normalteiler einer
     Gruppe $G$ mit $G=G_{1}\oplus\dotso \oplus G_{n}$, so sind die Teilsummen
     $G_{i_{1}}\oplus\dotso \oplus G_{i_{k}}$ die einzigen Normalteiler von
-    $G_{j}$. Insbesondere existiert zu jedem Normalteiler $N\lhd G$
-    \todo{stimmt die Richtung?} ein $M\lhd G$ mit $G=N\oplus M$.
+    $G_{j}$. Insbesondere existiert zu jedem Normalteiler $N\unlhd G$
+    \todo{stimmt die Richtung?} ein $M\unlhd G$ mit $G=N\oplus M$.
    \item Direkte Produkte von endlich vielen isomorphen einfachen Gruppen sind
     stets charakteristisch einfach.
    \item Jede endliche charakteristisch einfache Gruppe $G$ ist eine direkte
@@ -1926,7 +1926,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}
-     \item Sei die Voraussetzung erfüllt und $g\in N\lhd G$. Wir schreiben $g=
+     \item Sei die Voraussetzung erfüllt und $g\in N\unlhd G$. Wir schreiben $g=
       g_{1}\cdot\dotso \cdot g_{n}$ mit $g_{1}\in G_{1},\dotsc, g_{n}\in
       G_{n}$. Dann genügt zu zeigen:
       \begin{gather}
@@ -1959,7 +1959,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 	Nach dem \autoref{satz:35} ist $\ker f=l\Z$ für ein $l\in\N_{0}$.
 	Dabei ist $l\neq0$. Denn andernfalls wäre $\Z/\{0\}\cong\Z$. Aber $\Z$
 	ist nicht einfach. Ferner ist $l=p$ eine Primzahl. Denn andernfalls
-	gilt für $d\mid l$: $0\neq d\Z/l\Z\lhd\Z/l\Z$. Daher sei \OE
+	gilt für $d\mid l$: $0\neq d\Z/l\Z\unlhd\Z/l\Z$. Daher sei \OE
 	$G=(\Z/p\Z)^{n}$. Bekanntlich ist $\Z/p\Z$ ein Körper und
 	$(\Z/p\Z)^{n}$ kann man als $\Z/p\Z$"~Vektorraum auffassen. Jeder
 	Automorphismus dieses Vektorraums ist auch ein Gruppenhomomorphismus
@@ -1973,9 +1973,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
       minimaler Normalteiler von $G$.  Für $\alpha\in\Aut G$ ist dann auch
       $\alpha(N)$ wieder ein minimaler Normalteiler von $G$. Wir wählen eine
       möglichst große Untergruppe $M\leq G$, die direkte Summe einiger
-      $\alpha(N)$ ist. Offenbar ist $M\lhd G$. Wir nehmen nun an, dass es
+      $\alpha(N)$ ist. Offenbar ist $M\unlhd G$. Wir nehmen nun an, dass es
       einen Automorphismus $\beta\in\Aut G$ mit $\beta(N)\nsubseteq M$ gibt.
-      Dann gilt: $M\cap\beta(N)\lhd G$ und $M\cap\beta(N)<\beta(N)$. Also ist
+      Dann gilt: $M\cap\beta(N)\unlhd G$ und $M\cap\beta(N)<\beta(N)$. Also ist
       $M\cap\beta(N)=1$ wegen der Minimalität von $\beta(N)$. Folglich ist
       $M\beta(N)= M\oplus\beta(N)$ im Widerspruch zur Wahl des $N$. Daher ist
       $M=\langle\beta(N)\colon\beta\in\Aut G\rangle$. Insbesondere ist $M$
@@ -2047,7 +2047,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{defini}[Unzerlegbare $\Omega$"~Gruppe]
   Sei $\Omega$ eine Menge. Eine $\Omega$"~Gruppe $G\neq1$ heißt
   \highl[$\Omega$"~Gruppe!unzerlegbare]{unzerlegbar}, wenn keine echten
-  $\Omega$"~Normalteiler $M,N\lhd G$ mit $G=M\oplus N$ existieren.
+  $\Omega$"~Normalteiler $M,N\unlhd G$ mit $G=M\oplus N$ existieren.
 \end{defini}
 
 \begin{bemerk}\label{bem:65}
@@ -2059,7 +2059,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{satz}
   Sei $\Omega$ eine Menge und $G$ eine $\Omega$"~Gruppe mit Minimalbedingung
   für $\Omega$"~Untergruppen. Dann existieren endlich viele unzerlegbare
-  $\Omega$"~Normalteiler $G_{1},\dotsc, G_{n}\lhd G$ mit $G=G_{1}\oplus\dotso
+  $\Omega$"~Normalteiler $G_{1},\dotsc, G_{n}\unlhd G$ mit $G=G_{1}\oplus\dotso
   \oplus G_{n}$.
   \begin{proof}
     Andernfalls ist die Menge $\FM$ aller $\Omega$"~Untergruppen von $G$, die
@@ -2735,7 +2735,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{satz}\label{satz:83}
   Für Untergruppen $A$ und $B$ einer Gruppe $G$ gilt stets:
   \begin{enumerate}
-   \item $[A,B]\lhd\langle A,B\rangle$.
+   \item $[A,B]\unlhd\langle A,B\rangle$.
    \item $[A,B]\leq A\Leftrightarrow\forall b\in B\colon bAb^{-1}\subseteq A$.
     Man sagt hierzu, dass das $A$ von $B$ normalisiert wird.
   \end{enumerate}
@@ -2781,7 +2781,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{proof}
     \begin{enumerate}
      \item Aus der Voraussetzung folgt, dass $BC=CB$ nach dem
-      \autoref{satz:83} (ii), d.\,h. $BC\leq G$. Ferner ist $[A,C]\lhd\langle
+      \autoref{satz:83} (ii), d.\,h. $BC\leq G$. Ferner ist $[A,C]\unlhd\langle
       A,C\rangle$. Insbesondere bedeutet das: $x[A,C]x^{-1}= [A,C]$ für
       $x\in[A,B]\leq A$. Daher $[A,B][A,C]= [A,C][A,B]\leq G$. Ferner:
       $[a,bc]= [a,b]b[a,c]b^{-1}= [a,b][\underbrace{bab^{-1}}_{\in
@@ -2810,13 +2810,13 @@ Codierungstheorie, \textsc{Banach}räume etc.
   charakteristisch und normal.
 \end{bemerk}
 
-\begin{satz}
+\begin{satz}\label{satz:85}
   Für jede Untergruppe $H$ sind äquivalent: (1) $G'\subseteq H$ sowie (2)
-  $H\lhd G$ und $G/H$ abelsch.
+  $H\unlhd G$ und $G/H$ abelsch.
   \begin{proof}
     Wir betrachten zunächst die Richtung von (1) nach (2): Sei $G'\subseteq
     H$. Dann folgt: $ghg^{-1}= \underbrace{[g,h]}_{\in G'}h^{-1}\in H$.
-    Folglich: $H\lhd G$. Für $x,y\in G$ ist ferner $1=[x,y]H=[xH,yH]$, d.\,h.
+    Folglich: $H\unlhd G$. Für $x,y\in G$ ist ferner $1=[x,y]H=[xH,yH]$, d.\,h.
     $(xH)(yH)=(yH)(xH)$.
 
     Sei nun die Bedingung (2) erfüllt: Für $x,y\in G$ ist dann: $[x,y]H=
@@ -2836,6 +2836,139 @@ Codierungstheorie, \textsc{Banach}räume etc.
        G^{(2)}\coloneq(G')'=G''=[G',G'],\dotsc,G^{(i+1)}\coloneq[G^{(i)}, G^{(i)}]
   \end{gather*}
 \end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Für jeden Gruppenhomomorphismus $f\colon G\rightarrow H$ und jede
+    natürliche Zahl $i$ ist $f(G^{(i)})= f(G)^{(i)}\leq H^{(i)}$. Insbesondere
+    ist $G^{(i)}\leq G$ vollinvariant.
+   \item Für $U\leq G$ und $i\in\N_{0}$ folgt, $U^{(i)}\leq G^{(i)}$.
+   \item Offenbar ist $G=G^{(0)}\geq G^{(1)}\geq G^{(2)}\geq\dotsb$. Wir
+    setzen $G^{(\infty)}\coloneq\bigcap_{i\in \N} G^{(i)}$.
+  \end{enumerate}
+\end{bemerk}
+
+%def 8.7
+\begin{defini}[Auflösbare Gruppe]
+  Eine Gruppe $G$ mit $G^{(n)}=1$ für ein $n\in\N_{0}$ heißt
+  \highl{auflösbar}\index{Gruppe!auflösbare}. Gegebenenfalls heißt das
+  kleinste $s\in\N_{0}$ mit $G^{(s)}=1$ die \highl{Auflösbarkeitsstufe} von
+  $G$.
+\end{defini}
+
+\begin{bemerk}\label{bem:87}
+  \begin{enumerate}
+   \item Folgende Äquivalenzen gelten:
+    \begin{align*}
+      s=0 &\Leftrightarrow G=1\\
+      s\leq1 &\Leftrightarrow G'=1\Leftrightarrow G \text{ abelsch}\\
+      s\leq2 &\Leftrightarrow G''=2\Leftrightarrow G\text{ metabelsch}
+    \end{align*}
+   \item Untergruppen und Faktorgruppen von auflösbaren Gruppen sind auflösbar.
+   \item Für auflösbare Gruppen $G.H$ ist auch $G\times H$ auflösbar. Denn
+    $(G\times H)^{(i)}= G^{(i)}\times H^{(i)}$ für $i\in\N_{0}$.
+   \item Sind $M,N\unlhd G$ und $G/M, G/N$ auflösbar, so ist auch $G/M\cap N$
+    auflösbar. Denn nach der \autoref{bem:46} ist $G/M\cap N$ zu einer
+    Untergruppe von $G/M\times G/N$ isomorph.
+   \item Ist $G$ auflösbar der Stufe $s$, so ist $G=G^{(0)}\unrhd
+    G^{(1)}\unrhd\dotso \unrhd G^{(s)}=1$ eine Normalreihe mit abelschen Faktoren.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{satz}\label{satz:87}
+  Für jede Gruppe $G$ sind äquivalent:
+  \begin{enumerate}
+   \item $G$ auflösbar.
+   \item $G$ hat eine Normalreihe mit abelschen Faktoren.
+   \item $G$ hat eine Subnormalreihe $G=G_{(0)}\unrhd G_{1}\unrhd\dotso \unrhd
+    G_{t}=1$ mit abelschen Faktoren.
+  \end{enumerate}
+  \begin{proof}
+    Die Richtung von Aussage 1 zu Aussage 2 folgt nach der obigen Bemerkung.
+    Die von 2 nach 3 ist trivial. So bleibt nur noch die Richtung von 3 zu 1
+    zu zeigen: Wir nehmen an, dass die Voraussetzung erfüllt ist. Dann zeigen
+    wir induktiv: $G^{(i)}\leq G_{i}$ für $i\in\N_{0}$. Die Aussage ist für
+    $i=0$ klar. Sei also $i>0$ und  $G^{(i-1)}\leq G_{i-1}$. Da $G_{i}\unlhd
+    G_{i-1}$ und $G_{i-1}/G_{i}$ abelsch ist, folgt aus \autoref{satz:85}:
+    $G^{(i)}= (G^{(i-1)})'\leq G_{i-1}'\leq G_{i}$. Am Schluss ist also
+    $G^{(t)}\leq G_{t}=1$.
+  \end{proof}
+\end{satz}
+
+\begin{bsp}
+  Für $n\in\N$ und jeden Körper $K$ ist die Gruppe $B(n,K)$ aller oberen
+  Dreiecksmatrizen in $\GL(n,K)$ auflösbar.
+  \begin{gather*}
+    \begin{pmatrix}
+      * & \dotso & *\\
+        & \ddots & \vdots\\
+      \text{\huge{0}} & & *
+    \end{pmatrix}
+  \end{gather*}
+\end{bsp}
+
+%satz 8.8
+\begin{satz}
+  Für jede Gruppe $G$ und $N\unlhd G$ gilt: $G$ ist genau dann auflösbar, wenn
+  $N$ und $G/N$ auflösbar sind.
+  \begin{proof}
+    Wir müssen nur die Rückrichtung zeigen. Denn die andere Richtung wurde
+    bereits in \autoref{bem:87} (ii) gezeigt. Seien $N$ und $G/N$ auflösbar.
+    Dann existieren $s,t\in\N_{0}$ mit $N^{(i)}= 1$ und $1=(G/N)^{(t)}=
+    G^{(t)}N/N$. Folglich: $G^{(t)}\leq N$ und $G^{(t+s)}\leq N^{(s)}=1$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Für auflösbare Normalteiler $M,N$ einer Gruppe $G$ ist auch $MN$ ein
+  auflösbarer Normalteiler von $G$. Dies folgt aus dem Satz wegen $MN/N\cong
+  M/M\cap N$. Ist $G$ endlich, so ist also das Produkt aller auflösbaren
+  Normalteiler ein auflösbarer Normalteiler von $G$. Dieser heißt
+  \highl[Radikal!auflösbares]{auflösbares Radikal} von $G$.
+\end{bemerk}
+
+%satz 8.9
+\begin{satz}
+  Für jede endliche Gruppe $G$ sind äquivalent:
+  \begin{enumerate}
+   \item $G$ ist auflösbar.
+   \item Jeder Kompositionsfaktor von $G$ ist zu $\Z/p\Z$ für ein $p\in\PP$
+    isomorph.
+   \item Jeder Hauptfaktor von $G$ ist zu $(\Z/p\Z)^{n}$ für geeignete
+    $p\in\PP$ und natürliche $n$ isomorph.
+  \end{enumerate}
+  \begin{proof}
+    Die Richtungen (ii)$\Rightarrow$(i) und (iii)$\Rightarrow$(i) folgen nach
+    \autoref{satz:87}. Also zeigen wir zuerst (i)$\Rightarrow$(ii): Sei $G$
+    auflösbar mit der Kompositionsreihe $G=G_{0}\unrhd G_{1}\unrhd\dotso \unrhd
+    G_{l}=1$. Für $i=1,\dotsc,l$ ist dann $S_{i}\coloneq G_{i-1}/G_{i}$
+    auflösbar und einfach. Daher $S_{i}'\lhd S_{i}$\footnote{Sonst wäre
+    $S_{i}''= S_{i}'= S_{i}$ usw.}, also $S_{i}'=1$, d.\,h. $S_{i}$ abelsch.
+    Sei $1\neq x\in S_{i}$. Dann ist $1\neq\langle x\rangle\unlhd S_{i}$, also
+    $S_{i}=\langle x\rangle$ zyklisch. Da $S_{i}$ einfach ist, folgt,
+    $p_{i}\coloneq\abs{S_{i}}\in\PP$. Folglich: $S_{i}\cong\Z/p_{i}\Z$.
+
+    Nun bleibt noch die Richtung (i)$\Rightarrow$(iii): Sei dazu $G$ auflösbar
+    mit Hauptreihe $G=G_{0}\unrhd G_{1}\unrhd\dotso \unrhd G_{l}=1$. Für
+    $i=1,\dotsc,l$ ist dann $T_{i}\coloneq G_{i-1}/G_{i}$ auflösbar und
+    charakteristisch einfach. Nach \autoref{satz:63} ist $T_{i}\cong
+    S_{i}^{n_{i}}$ für eine auflösbar einfache Gruppe $S_{i}$ und ein
+    natürliches $n_{i}$. Wie oben ist $S_{i}\cong\Z/p_{i}\Z$ für eine Primzahl
+    $p_{i}$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Man hat die folgenden Auflösbarkeitskriterien:
+  \begin{enumerate}
+   \item \textsc{Burnside}s $p^{a}q^{b}$"~Satz von 1904: Für $p,q\in\PP$ und
+    $a,b\in\N_{0}$ ist jede Gruppe der Ordnung $p^{a}q^{b}$ auflösbar.
+   \item Satz von \textsc{Feit}"~\textsc{Thompson} von 1963: Gruppen ungerader
+    Ordnung sind stets auflösbar. Der Beweis des Satzes umfasst etwa 250~Seiten.
+  \end{enumerate}
+\end{bemerk}
+
+
 
 \clearpage
 \appendix
