Die Anzahl der Argumente fehlte.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2130 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -149,7 +149,7 @@
 % Bei den Omega-Gruppen steht das omega vor dem Zeichen. Der Befehl
 % setzt das um. Wenn jemandem was besseres einfaellt, bitte Bescheid
 % sagen.
-\newcommand*{\homega}{\sideset{^{\omega}}{}{\mathop{#1}}}
+\newcommand*{\homega}[1]{\sideset{^{\omega}}{}{\mathop{#1}}}
 
 % Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
