--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -1173,6 +1173,88 @@ $A\leq\nicefrac{1}{4\pi} l^2$ gilt.
 
 \todo[inline]{Gleichheitsfall  betrachten}
 
+\section{Gleichverteilung von Folgen}
+
+Wir bezeichnen mit $\langle x\rangle$ den Rest von $x$ modulo $1$. Sei
+$\gamma\in\R$. Dann ist $\langle\gamma\rangle\coloneq\gamma\mod 1=
+\gamma-[\gamma]\Rightarrow\gamma-\langle\gamma\rangle\in\N$. Unser Ziel ist
+es, für $\gamma\in\C\setminus\R$ zu zeigen, dass die Folge der $(\langle
+n\gamma\rangle)$ das Intervall gleichmäßig füllt. Vom Mathematiker
+\textsc{Kronecker} stammt die Feststellung, das $\{\langle
+n\gamma\rangle\colon n\in\N\}$ dicht in $[0,1]$ liegen.
+
+\begin{defini}
+  Eine Folge $(x_{n})_{n}\subseteq[0,1]$ heißt \highl{gleichverteilt} im
+  Intervall $[0,1]$, falls für die Intervalle $[a,b]\subseteq[0,1]$ gilt:
+  \begin{gather*}
+    \frac{1}{N}\#\{n\in\N\colon1\leq n\leq N,
+       x_{n}\in[a,b]\}\xrightarrow{N\rightarrow\infty} b-a
+  \end{gather*}
+\end{defini}
+
+Für den Beweis der Hauptaussage benötigen wir zunächst eine Vorbereitung:
+\begin{satz}\label{satz:220}
+  Sei $f$ stetig und einperiodisch. Dann gilt:
+  \begin{gather*}
+    \frac{1}{N} \sum_{n=1}^{N} f(n\gamma)\xrightarrow{N\rightarrow\infty}
+       \int_{0}^{1} f(x)}dx
+  \end{gather*}
+  \begin{proof}
+    Der Beweis wird in mehreren Schritten ausgeführt:
+    \begin{enumerate}[1.\,Schr{i}tt]
+     \item Für die Funktion, die identisch $1$ ist, ist die Aussage klar.
+     \item Nun betrachten wir die Funktion $f(x)= e^{2\pi ikx}$ für
+      $k\in\Z\setminus\{0\}$. Für das Integral wissen wir: $\int_{0}^{1}
+      f(x)\,dx= \frac{1}{2\pi ik}[e^{2\pi ikx}]_{0}^{1}=0$. Nun betrachten wir
+      die Summe:
+      \begin{align*}
+	\frac{1}{N} \sum_{n=1}^{N} f(n\gamma) &= \frac{1}{N}\sum_{n=1}^{N}
+	   e^{2\pi ik\gamma n}= \frac{1}{N} \frac{1-e^{2\pi
+	   ik\gamma(W+1)}}{1-e^{2\pi ik\gamma}}\\
+	&= \frac{e^{2\pi ik\gamma}}{N} \frac{1-e^{2\pi ik\gamma W}}{1-e^{2\pi
+	   ik\gamma}}\xrightarrow{N\rightarrow\infty}0
+      \end{align*}
+     \item Sei nun $f$ ein trigonometrisches Polynom: $f(x)= \sum_{k=-n}^{n}
+      a_{k} e^{ikx2\pi}$. Dann folgt aus dem zweiten Schritt:
+      \begin{align*}
+	\frac{1}{N} \sum_{n=1}^{N} f(n\gamma) &= \frac{1}{N} \sum_{n=1}^{N}
+	   \sum_{k=-l}^{l} a_{k} e^{ikn\gamma2\pi}\\
+	&= \sum_{k=-l}^{l} a_{k} \sum_{n=1}^{N} e^{ikn\gamma2\pi}
+      \end{align*}
+      Der letzte Term strebt gegen $\int_{0}^{1} e^{ik2\pi x}\,dx$ und für den 
+      Gesamtausdruck ergibt sich im Grenzprozess: $\int_{0}^{1}\sum_{k=-l}^{l}
+      a_{k} e^{ik2\pi x}\,dx= \int_{0}^{1} f(x)\,dx$.
+     \item Schließlich sei die Funktion $f$ stetig und einperiodisch. Für ein
+      $\epsilon>0$ gibt es ein trigonometrisches Polynom $P$ und für alle $s$
+      gilt: $\abs{f(s)-P(s)}\leq\epsilon$. Also haben wir insgesamt:
+      \begin{align*}
+	\abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} f(n\gamma)- \int_{0}^{1}
+	   f(x)\,dx} &\leq \abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} f(n\gamma)-
+	   \nicefrac{1}{N} \sum_{n=1}^{N} P(n\gamma)}+ \abs[\bigg]{\frac{1}{N}
+	   \sum_{n=1}^{N} P(n\gamma)- \int_{0}^{1} P(x)\,dx}\\
+	&\qquad+\abs[\bigg]{\int_{0}^{1} P(x)\,dx-\int_{0}^{1} f(x)\,dx}\\
+	&\leq \frac{1}{N} \sum_{n=1}^{N} \abs{f(n\gamma)-P(n\gamma)}+
+	   \epsilon+ \int_{0}^{1} \abs{P(x)-f(x)}\,dx\leq3\epsilon
+      \end{align*}
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{satz}[Satz von \textsc{Weyl}]
+  Für beliebige $\gamma\notin\Q$ ist $(\langle n\gamma\rangle)_{n\in\N}$
+  gleichverteilt.
+  \begin{proof}
+    Sei $1_{[a,b]}$ die charakteristische Funktion des Intervalls $[a,b]$. Die
+    wird einperiodisch auf $\R$ fortgesetzt. Es folgt:
+    \begin{align*}
+      \frac{1}{N} \#\{n\in\N\colon1\leq n\leq N, x_{n}\in[a,b]\} &=
+	 \frac{1}{N} \sum_{n=1}^{N} 1_{[a,b]} (x_{n})\\
+      &= \frac{1}{N} \sum_{n=1}^{N} 1_{[a,b]} (n\gamma)\\
+      &\xrightarrow[\text{\autoref{satz:220}}]{N\rightarrow\infty}
+	 \int_{0}^{1} 1_{[a,b]} (x)\,dx= b-a
+    \end{align*}
+  \end{proof}
+\end{satz}
 
 \todo[inline]{fehlende Vorlesungen einfuegen}
 
