--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -4225,6 +4225,113 @@ von $A$:
   Produkttopologien sind.
 \end{enumerate}
 
+\section{Fourierreihen reeller Funktionen}
+
+Sei $f(x)$ eine $2\pi$"=periodische Funktion. Zeigen Sie, dass $f$
+genau dann eine reelle Funktion ist, wenn
+\begin{gather*}
+  \hat{f}(-n)= \overline{\hat{f}(n)}
+\end{gather*}
+für alle ganzen Zahlen $n$ gilt. Folgern Sie daraus, dass die
+Partialsummen
+\begin{gather*}
+  S_{N}f(x)= \sum_{N=-n}^{n} \hat{f}(N)e^{iNx}
+\end{gather*}
+ebenfalls reelle Funktionen sind! Zeigen Sie, dass die Fourierreihe
+einer geraden/ungeraden Funktion $f$ ebenfalls als Kosinus-/Sinusreihe
+geschrieben werden kann!
+
+\section{Berechnen von Fourierreihen}
+
+Entwickeln Sie die folgenden Fuktionen in Fourierreihen. Dabei seien
+die Funktionen $2\pi$"=periodisch auf ganz $\R$ fortgesetzt gedacht.
+\begin{enumerate}[(a)]
+\item die charateristische Funktion $f(x)=I_{[a,b]}(x)$ eines
+  Intervalss $[a,b]\subset [-\pi,\pi]$
+\item $f(x)=\abs{x}$ für $x\in[-\pi,\pi]$
+\end{enumerate}
+Zeichnen Sie die ersten Partialsummen mit Ihrem
+Lieblingsalgebraprogramm. An welchen Stellen konvergieren die
+Fourierreihen gegen den entsprechenden Funktionswert? Schreiben Sie
+die Fourierreihe aus dem zweiten Punkt als Sinus- und Kosinusreihe!
+Berechnen Sie diese an der Stelle $x=0$ und zeigen Sie damit die
+Formeln
+\begin{align*}
+  \sum_{n=1}^{\infty} \frac{1}{(2n-1)^{2}} &= \frac{\pi^{2}}{8} &
+  \sum_{n=1}^{\infty} \frac{1}{n^{2}} &= \frac{\pi^{2}}{6}
+\end{align*}
+
+\section{Die gezupfte Saite}
+
+Entwickeln Sie die Funktion
+\begin{gather*}
+  f(x)= 
+  \begin{cases}
+    \frac{xh}{p} & 0\leq x\leq p\\
+    \frac{h(\pi-x)}{\pi-p} & p\leq x\leq \pi
+  \end{cases}
+\end{gather*}
+in eine Sinusreihe $\sum_{k=1}^{\infty} a_{k} \sin(kx)$. Zeichnen Sie
+$f(x)$.  Betrachten Sie die Wellengleichung mit Anfangsauslenkung
+$u(x,0)= f(x)$ und Anfangsgeschwindigkeit $0$. Wie sehen die
+\textsc{d'Alembert}-Lösung und die Lösung als Fourierreihe $u(x,t)=
+\sum a_{k} \cos(kt)\sin(kx)$ aus? Können sie tatsächlich Lösungen der
+Wellengleichung sein? Für welchen Wert von $p$ verschwinden die
+zweiten, vierten sechsten usw. Oberschwingungen $a_{2}=
+a_{4}=\ldots=0$? Für welchen Wert von $p$ verschwinden die dritten,
+sechsten, neunten usw. Oberschwingungen?
+
+\section{Summationsmethoden I}
+
+Sei $\sum \xi_{k}$ eine Reihe komplexer Zahlen mit den Partialsummen
+$S_{n}= \sum_{k=1}^{n} \xi_{k}$, den \textsc{Cesaro}-Partialsummen
+$C_{n}= n^{-1}\sum_{k=1}^{n} S_{k}$ und den
+\textsc{Abel}-Partialsummen $A_{n}(r)= \sum_{k=1}^{n}
+r^{k}\xi_{k}$. Die Reihe $\sum\xi_{k}$ ist konvergent/summierbar mit
+der Summe $S$, falls $\lim_{n\rightarrow\infty} C_{n}=S$. Sie ist
+\textsc{Abel}-summierbar mit der Summe $S$, falls $\lim_{r\nearrow1}
+\lim_{n\rightarrow\infty} A_{n}(r)=S$ gilt.
+\begin{enumerate}[(a)]
+\item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
+  \textsc{Cesaro}-summierbar mit Summe $S$ ist, falls sie summierbar
+  mit Summe $S$ ist. Hinweis: Es ist hilfreich, $S=0$ anzunehmen.
+\item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
+  \textsc{Abel}-summierbar mit Summe $S$ ist, falls sie summierbar mit
+  Summe $S$ ist. Hinweis: Es ist hilfreich, $S=0$ anzunehmen. Dann
+  kann man die Formel $A_{n}(r)= (1-r)\sum_{k=1}^{n} Sr^{k}
+  +S_{n}r^{n+1}$ beweisen und benutzen.
+\item Zeigen Sie, dass die Reihe $\sum\xi_{k}$
+  \textsc{Abel}-summierbar mit Summe $S$ ist, falls sie
+  \textsc{Cesaro}-summierbar mit Summe $S$ ist. Hinweis: Es ist
+  hilfreich, $S=0$ anzunehmen. Dann kann man die Formel
+  $\sum_{k=1}^{\infty} \xi_{k}r^{k}=(1-r)^{2}\sum_{k=1}^{\infty}
+  kC_{k}r^{k}$ beweisen und benutzen.
+\end{enumerate}
+
+\section{Summationsmethoden II}
+
+In der obigen Aufgabe wurden die folgenden Implikationen für eine
+Reihe $\sum\xi_{k}$ komplexer Zahlen gezeigt: summierbar $\Rightarrow$
+\textsc{Cesaro}-summierbar $\Rightarrow$
+\textsc{Abel}-summierbar. Geben Sie Beispiele an, die zeigen, dass die
+inversen Implikationen nicht gelten.
+
+\section{Summationsmethoden III -- Tauber-Satz}
+
+Sei nun $\sum\xi_{k}$ \textsc{Cesaro}-summierbar  mit der Summe $S$
+und der zusätzlichen Voraussetzung $\lim_{k\rightarrow\infty}
+k\xi_{k}=0$. Zeigen Sie, dass $\sum\xi_{k}$ summierbar mit der Summe
+$S$ ist.
+
+\section{Dirichlet-Kern}
+
+Seien $L_{N}= \norm{D_{N}}_{1}= (2\pi)^{-1} \int_{-\pi}^{\pi}
+\abs{D_{N}(x)}\,dx$ die so genannten Lebesgue-Konstanten, die
+$L_{1}$-Normen der Dirichlet-Kerne. Zeigen Sie, dass es eine Konstante
+$c>0$ gibt, mit $L_{N}\geq c\log N$ für $N=1,2,\ldots$. Folgern Sie,
+dass es eine Folge stetiger Funktionen $f_{N}$ und eine Konstante $c'$
+gibt, mit $\abs{f_{n}}\leq1$ und $\abs{S_{N}(f_{N})(0)}\geq c'\logN$.
+
 \section{Zur isoperimetrischen Ugleichung}
 \begin{enumerate}
  \item Sei $\gamma\colon[a,b]\rightarrow\R^{2}$ mti $\gamma(s)= (x(s), y(s))$
